[tool.poetry]
name = "datexplore"
version = "0.1.0"
description = "A package for exploratory data analysis and data cleaning."
authors = ["Jordan Cairns, Sid Grover, Scout McKee"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.0,<=3.12"
pandas = "^1.3.3"  
seaborn = "^0.11.1"  

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5" 
pytest-cov = "^3.0.0"  
jupyter = "^1.0.0"
myst-nb = {version = "^1.0.0", python = "^3.9"}
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
