[tool.poetry]
name = "datexplore"
version = "0.0.2"
description = "A package for exploratory data analysis and data cleaning."
authors = ["Jordan Cairns, Sid Grover, Scout McKee"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.0"
pandas = ">=2.1.4"
seaborn = "^0.11.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
jupyter = "^1.0.0"
myst-nb = {version = "^1.0.0", python = "^3.9"}
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
] 
branch = "main"                             
changelog_file = "CHANGELOG.md"             
build_command = "pip install poetry && poetry build"
